test/spec/token-number-separation.fail.txt
;;; ERROR: 1
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/token-number-separation.fail.wast
(;; STDERR ;;;
Error running "wast2wasm":
out/third_party/testsuite/token-number-separation.fail.wast:1:18: unexpected token "0drop"
(module (func br 0drop))
                 ^^^^^
out/third_party/testsuite/token-number-separation.fail.wast:1:23: syntax error, unexpected ), expecting NAT or VAR
(module (func br 0drop))
                      ^

;;; STDERR ;;)
